litmask/tests/compile/init_machine_external_grammar_missing_provider.stderr
error: init! grammar: `init!(bind_to_machine + provider)` requires a provider expression after `+`
  --> tests/compile/init_machine_external_grammar_missing_provider.rs:10:13
   |
10 |     let _ = init!(bind_to_machine +);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
